[package]
name = "wakadoctor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_ini = "0.2.0"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
uuid = "1.17.0"
